# retro-game-player

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  README.md  THIRD-PARTY-NOTICES.md  eslint.config.js  index.html  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vendor.toml  vite.config.ts  vitest.config.ts
.claude/: architecture-rules.example.json  grimoire-config.json  grimoire-files.json  model-effort-profiles.json  recipes.json  settings.json
.claude/hooks/: protected-branch-guard.sh  stealth-guard.sh
.grimoire-archive/20260712T023753Z/: MANIFEST.md
.scaffold-base/.claude/: grimoire-files.json  settings.json
.scaffold-base/docs/: features.md
docs/: README.md  architecture-guidelines.md  changelog.md  coding-standards.md  execution-profile-spike-s1.md  features.md  integration-workflow.md  quickstart.md  release-planning-v0.1.md  release-planning-v0.10.md  release-planning-v0.11.md  release-planning-v0.14.md  release-planning-v0.15.md  release-planning-v0.17.md  release-planning-v0.19.md  release-planning-v0.2.md  release-planning-v0.20.md  release-planning-v0.21.md  release-planning-v0.22.md  release-planning-v0.3.md  release-planning-v0.4.md  release-planning-v0.5.md  release-planning-v0.6.md  release-planning-v0.7.md  release-planning-v0.8.md  release-planning-v0.9.md  roadmap.md  tickets-v0.1-remaining.md  version-history.md
docs/coding-standards/: css.md  html.md  javascript.md  python.md  rust.md  tooling.md
docs/design/: README.md  agent-roles-design.md  app-infrastructure-design.md  architecture-design.md  architecture-fitness-design.md  auto-import-download-design.md  autonomy-hardening-design.md  autonomy-scheduling-design.md  boot-latency-spike.md  collections-design.md  console-browse-design.md  console-catalog-design.md  controller-input-design.md  copilot-grm-namespacing-design.md  core-discovery-design.md  core-management-design.md  core-options-design.md  cost-governance-design.md  crossover-integration-design.md  crt-filter-design.md  dependency-channel-conformance.md  direct-download-design.md  doc-assurance-design.md  download-browsing-ux-design.md  download-search-design.md  dry-duplication-enforcement-design.md  emulation-launch-design.md  error-telemetry-design.md  execution-profiles-design.md  familiar-enrichment-design.md  feature-aware-sync-design.md  file-search-design.md  fleet-ensign-design.md  (+46 more)
scripts/: build-console-catalog.mjs  build-ejs-bundle.mjs  emulator-core-cache.test.mjs  inspect-cores.mjs  inspect-create-success.mjs  inspect-empty-states.mjs  mock-ipc.mjs  mock-ipc.test.mjs  motion.test.mjs  release_sign_notarize.py  release_sign_notarize.test.mjs  seed-smoke.mjs  start-with-rom-sites.sh  token-adoption.test.mjs  visual-inspect.mjs  visual-inspect.test.mjs
src/: App.tsx  main.tsx  routes.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/catalog/: gb.json  gba.json  gbc.json  wii.json
src-tauri/src/: error.rs  lib.rs  main.rs  telemetry.rs
src-tauri/src/commands/: achievements.rs  app_config.rs  collections.rs  console.rs  controllers.rs  core_options.rs  cores.rs  crt_filter.rs  downloads.rs  familiar.rs  fleet.rs  health.rs  inpage_cores.rs  launch.rs  library.rs  metadata.rs  mod.rs  native_play.rs  perf_tools.rs  play.rs  play_stats.rs  player_prefs.rs  retroachievements.rs  search.rs  sources.rs  steamgriddb.rs  vibrancy.rs
src-tauri/src/config/: migrate.rs  mod.rs  paths.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/console/: catalog.rs
src-tauri/src/core/core_options/: mod.rs  persistence.rs  probe.rs
src-tauri/src/core/cores/: arch.rs  buildbot.rs  install.rs  mod.rs  system_map.rs
src-tauri/src/core/familiar/: cache.rs  client.rs  keychain.rs  mod.rs  probe.rs  transport.rs
src-tauri/src/core/launch/: args.rs  descriptor.rs  external.rs  external_launcher.rs  launcher.rs  locator.rs  mod.rs  observer.rs
src-tauri/src/core/metadata/: art_cache.rs  art_fallback_chain.rs  bundle_icon.rs  catalog_art.rs  cdn_client.rs  fallback.rs  mod.rs  name_sanitizer.rs  steam_art.rs  steam_cdn.rs  steamgriddb_art.rs  steamgriddb_client.rs  wikipedia.rs
src-tauri/src/core/retroachievements/: achievement_set.rs  badge_cache.rs  cache.rs  client.rs  mod.rs
src-tauri/src/core/search/: catalog.rs  console_aliases.rs  discovery.rs  download.rs  fetch.rs  liveness.rs  mod.rs  profiles.rs  provider.rs  query_compose.rs  template.rs
src-tauri/src/core/sources/: app_scan.rs  crossover.rs  gog.rs  itch.rs  mod.rs  rom.rs  steam.rs
src-tauri/src/core/vibrancy/: blur_cache.rs  blur_pipeline.rs  mod.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/db/migrations/: 001_init.sql  002_game_metadata.sql  003_seed_search_providers.sql  004_search_provider_kind.sql  009_seed_legal_search_providers.sql  010_library_life.sql  011_repair_renamed_app_paths.sql  012_romless_games.sql  013_gog_itch_sources.sql  014_crossover_source.sql  015_collections.sql  016_achievement_unlocks.sql  017_rom_provider_priority_and_seeds.sql  018_seed_web_search_meta_providers.sql  019_trust_tier_priorities.sql
src-tauri/src/db/repo/: achievement_unlocks.rs  art_cache.rs  controller_bindings.rs  cores.rs  library.rs  mod.rs  search_providers.rs  settings.rs
src-tauri/src/fleet/: identity.rs  manifest.rs  mod.rs  schemas.rs  server.rs
src-tauri/src/play/: core_extract.rs  ejs_cores.rs  mod.rs  saves.rs  server.rs
src-tauri/src/play/achievements/: definitions.rs  events.rs  ffi.rs  hash.rs  host.rs  mod.rs
src-tauri/src/play/native/: audio.rs  callbacks.rs  clock.rs  core_path.rs  ffi.rs  frame.rs  host.rs  hw_render.rs  mod.rs  perf_file.rs  perf_stats.rs  runtime.rs  systems.rs
src-tauri/src/play/native/runtime/: audio.rs  core_loop.rs  manual.rs  mod.rs  perf.rs  session.rs  video.rs
src-tauri/src/play/native/runtime/tests/: achievements.rs  alt_geometry.rs  av_core.rs  cohort.rs  hw_render.rs  input_probe.rs  mod.rs
vite/: aura-aliases.ts
(+606 files in other folders)
