[package]
name = "harmony"
version = "0.1.0"
description = "Harmony — a Mac-native (Apple Silicon) emulator frontend / launcher."
authors = ["Harmony"]
edition = "2021"

# The library the binary calls into. `cdylib`/`staticlib` are required by the
# mobile Tauri targets; `lib` lets unit tests link against the crate.
[lib]
name = "harmony_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# SHARED (append-only): each backend work item adds the crates its domain needs
# below. Keep one dependency per line, alphabetical, so parallel agents merge by
# concatenation rather than colliding on a shared line.
[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# --- APPEND DOMAIN DEPENDENCIES BELOW THIS LINE ---
dirs = "5"                                                 # W4 (app-support path resolution)
percent-encoding = "2"                                     # W8 (CDN URL encoding)
reqwest = { version = "0.12", features = ["json"] }        # W8 (CDN client; W5/W12 also need)
rusqlite = { version = "0.32", features = ["bundled"] }    # W3 (db)
# image = "..."                                            # W10 (vibrancy blur)

[dev-dependencies]
tempfile = "3"                                             # W8 (test helpers)
