[package]
name = "harmony"
version = "0.1.0"
description = "Harmony — a Mac-native (Apple Silicon) emulator frontend / launcher."
authors = ["Harmony"]
edition = "2021"

# The library the binary calls into. `cdylib`/`staticlib` are required by the
# mobile Tauri targets; `lib` lets unit tests link against the crate.
[lib]
name = "harmony_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# SHARED (append-only): each backend work item adds the crates its domain needs
# below. Keep one dependency per line, alphabetical, so parallel agents merge by
# concatenation rather than colliding on a shared line.
[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# --- APPEND DOMAIN DEPENDENCIES BELOW THIS LINE ---
base64 = "0.22"                                            # W10 (blurred-hero data URI)
crc32fast = "1"                                            # W6 (CRC32 ROM hashing)
dirs = "5"                                                 # W4 (app-support path resolution)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] } # W10 (vibrancy blur)
keyring = { version = "3", features = ["apple-native"] }   # W12 (macOS Keychain for the Familiar key)
md-5 = "0.10"                                              # W6 (MD5 ROM hashing)
percent-encoding = "2"                                     # W8 (CDN URL encoding)
quick-xml = "0.36"                                         # W6 (No-Intro Logiqx DAT parsing)
reqwest = { version = "0.12", features = ["json", "blocking"] } # W5/W8/W12 (network)
rusqlite = { version = "0.32", features = ["bundled"] }    # W3 (db)
tiny_http = "0.12"                                         # W11 (localhost fleet status server)
tauri-plugin-opener = "2"                                  # W17 (open search result URLs in system browser)
walkdir = "2"                                              # W6 (recursive folder walker)
zip = { version = "2", default-features = false, features = ["deflate"] } # W5 (core archive unzip)

[dev-dependencies]
tempfile = "3"                                             # W8 (test helpers)
