[package]
name = "retro-game-player"
version = "0.36.0"
description = "Retro Game Player — a Mac-native (Apple Silicon) retro game player."
authors = ["Retro Game Player"]
license = "GPL-3.0-only"
edition = "2021"

# The library the binary calls into. `cdylib`/`staticlib` are required by the
# mobile Tauri targets; `lib` lets unit tests link against the crate.
[lib]
name = "retro_game_player_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# SHARED (append-only): each backend work item adds the crates its domain needs
# below. Keep one dependency per line, alphabetical, so parallel agents merge by
# concatenation rather than colliding on a shared line.
[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# --- APPEND DOMAIN DEPENDENCIES BELOW THIS LINE ---
base64 = "0.22"                                            # W10 (blurred-hero data URI)
cpal = "0.15"                                               # W212 (native libretro core audio output via CoreAudio)
crc32fast = "1"                                            # W6 (CRC32 ROM hashing)
dirs = "5"                                                 # W4 (app-support path resolution)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] } # W10 (vibrancy blur)
keyring = { version = "3", features = ["apple-native"] }   # W12 (macOS Keychain for the Familiar key)
libloading = "0.8"                                         # W210 (dlopen a native libretro core .dylib)
md-5 = "0.10"                                              # W6 (MD5 ROM hashing)
percent-encoding = "2"                                     # W8 (CDN URL encoding)
plist = "1"                                                 # W313 (parse .app bundle Info.plist for the app-source scanner)
quick-xml = "0.36"                                         # W6 (No-Intro Logiqx DAT parsing)
reqwest = { version = "0.12", features = ["json", "blocking"] } # W5/W8/W12 (network)
rtrb = "0.3"                                               # W270 (lock-free SPSC audio ring for the realtime callback)
rusqlite = { version = "0.32", features = ["bundled"] }    # W3 (db)
scraper = "0.20"                                           # v0.16 (parse provider search-result HTML for in-app preview)
sevenz-rust = "0.6.1"                                      # W374 (one-time 7z decompression of EmulatorJS cores into the disk cache)
sha2 = "0.10"                                              # W241 (SHA-256 verify of on-demand EmulatorJS cores)
tiny_http = "0.12"                                         # W11 (localhost fleet status server)
tauri-plugin-opener = "2"                                  # W17 (open search result URLs in system browser)
include_dir = "0.7"                                       # v0.12 (embed the bundled console title catalog)
tauri-plugin-dialog = "2"                                 # v0.12 (native file picker for ROM import)
walkdir = "2"                                              # W6 (recursive folder walker)
zip = { version = "2", default-features = false, features = ["deflate"] } # W5 (core archive unzip)

# macOS-only: the core thread's QoS elevation (W274 stretch) is a Darwin
# scheduler concept, cfg-gated in play::native::runtime.
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"                                               # W274 (pthread_set_qos_class_self_np core-thread QoS)

[dev-dependencies]
tempfile = "3"                                             # W8 (test helpers)

# Dev-mode native play must be representative of release timing — at O0 the
# per-frame pixel/audio loops are slow enough to distort A/V pacing (W270).
[profile.dev]
opt-level = 1
